--- a/aplikcaija/EverythingNow/EverythingNow/Views/Natprevars/BuyTicket.cshtml
+++ b/aplikcaija/EverythingNow/EverythingNow/Views/Natprevars/BuyTicket.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "BuyTicket";
 }
 
-<h1>Game 1</h1>
+<h1>@ViewBag.faza: @ViewBag.domakjin vs @ViewBag.gostin</h1>
 <h3>Free seets: </h3>
 
 <table class="table">
