--- a/aplikcaija/EverythingNow/EverythingNow/Views/Natprevars/Details.cshtml
+++ b/aplikcaija/EverythingNow/EverythingNow/Views/Natprevars/Details.cshtml
@@ -4,8 +4,8 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
 
+<h2>Match:  @Html.DisplayFor(model => model.drzhavadomakjin) vs @Html.DisplayFor(model => model.drzhavagostin) </h2>
 <div>
     <hr />
     <dl class="row">
