--- a/aplikcaija/EverythingNow/EverythingNow/Views/Natprevars/Index.cshtml
+++ b/aplikcaija/EverythingNow/EverythingNow/Views/Natprevars/Index.cshtml
@@ -14,6 +14,12 @@
                 @Html.DisplayNameFor(model => model.Faza)
             </th>
             <th>
+                @Html.DisplayNameFor(model => model.drzhavadomakjin)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.drzhavagostin)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.Data)
             </th>
             <th>
@@ -34,6 +40,12 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Faza)
             </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.drzhavadomakjin)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.drzhavagostin)
+                </td>
             <td>
                     @Html.DisplayFor(modelItem => item.Data)
             </td>
