--- a/aplikcaija/EverythingNow/EverythingNow/Views/Natprevars/Details.cshtml
+++ b/aplikcaija/EverythingNow/EverythingNow/Views/Natprevars/Details.cshtml
@@ -4,111 +4,126 @@
     ViewData["Title"] = "Details";
 }
 
-
-<h2>Match:  @Html.DisplayFor(model => model.drzhavadomakjin) vs @Html.DisplayFor(model => model.drzhavagostin) </h2>
-<div>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Faza)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Faza)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.IdStadionNavigation.ImeStadion)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.IdStadionNavigation.ImeStadion)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Data)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Data)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Chas)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Chas)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.IdRezultatNavigation.KonecenRezultat)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.IdRezultatNavigation.KonecenRezultat)
-        </dd>
-        <dt class="col-sm-2">
-            Главен Судија
-        </dt>
-        @if (@ViewBag.glaven == "")
-        {
-            <dd class="col-sm-10">
-               Нема информации
-            </dd>
-        }else{
-        <dd class="col-sm-10">
-                @ViewBag.glaven
-        </dd>
-        }
-
-        <dt class="col-sm-2">
-            Помошни судии
-        </dt>
-
-        @if (@ViewBag.broj==0)
-        {
-            <dd class="col-sm-10">
-                Нема информации
-            </dd>
-        }
-        else
-        {
-            <dd class="col-sm-10">
-                @foreach (var p in @ViewBag.pomosni){
-                    @p 
+<div class="card">
+    <div class="card-body">
+        <h2>Match:  @Html.DisplayFor(model => model.drzhavadomakjin) vs @Html.DisplayFor(model => model.drzhavagostin) </h2>
+        <div>
+            <hr />
+            <dl class="row">
+                <dt class="col-sm-2">
+                    @Html.DisplayNameFor(model => model.Faza)
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.Faza)
+                </dd>
+                <dt class="col-sm-2">
+                    @Html.DisplayNameFor(model => model.IdStadionNavigation.ImeStadion)
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.IdStadionNavigation.ImeStadion)
+                </dd>
+                <dt class="col-sm-2">
+                    @Html.DisplayNameFor(model => model.Data)
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.Data)
+                </dd>
+                <dt class="col-sm-2">
+                    @Html.DisplayNameFor(model => model.Chas)
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.Chas)
+                </dd>
+                <dt class="col-sm-2">
+                    @Html.DisplayNameFor(model => model.IdRezultatNavigation.KonecenRezultat)
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.IdRezultatNavigation.KonecenRezultat)
+                </dd>
+                <dt class="col-sm-2">
+                    Главен Судија
+                </dt>
+                @if (@ViewBag.glaven == "")
+                {
+                    <dd class="col-sm-10">
+                        Нема информации
+                    </dd>
                 }
-            </dd>
-        }
+                else
+                {
+                    <dd class="col-sm-10">
+                        @ViewBag.glaven
+                    </dd>
+                }
+
+                <dt class="col-sm-2">
+                    Помошни судии
+                </dt>
+
+                @if (@ViewBag.broj == 0)
+                {
+                    <dd class="col-sm-10">
+                        Нема информации
+                    </dd>
+                }
+                else
+                {
+                    <dd class="col-sm-10">
+                        @foreach (var p in @ViewBag.pomosni)
+                        {
+                            @p
+                        }
+                    </dd>
+                }
 
 
-        <dt class = "col-sm-2">
-           Црвени картони
-        </dt>
-        @if (ViewBag.pogodoci.CrveniKartoni == null){
-            <dd class="col-sm-10">0</dd>
-        }else{
-            <dd class="col-sm-10">
-                @ViewBag.pogodoci.CrveniKartoni
-            </dd>
-        }
-         <dt class = "col-sm-2">
-           Жолти картони
-        </dt>
-        @if (ViewBag.pogodoci.ZoltiKartoni == null)
-        {
-            <dd class="col-sm-10">0</dd>
-        }else{
-            <dd class="col-sm-10">
-                @ViewBag.pogodoci.ZoltiKartoni
-            </dd>
-        }
-          <dt class = "col-sm-2">
-          Корнери
-        </dt>
-        @if (ViewBag.pogodoci.Korneri == null){
-            <dd class="col-sm-10">0</dd>
-        }else{
-            <dd class="col-sm-10">
-                @ViewBag.pogodoci.Korneri
-            </dd>
-        }
+                <dt class="col-sm-2">
+                    Црвени картони
+                </dt>
+                @if (ViewBag.pogodoci.CrveniKartoni == null)
+                {
+                    <dd class="col-sm-10">0</dd>
+                }
+                else
+                {
+                    <dd class="col-sm-10">
+                        @ViewBag.pogodoci.CrveniKartoni
+                    </dd>
+                }
+                <dt class="col-sm-2">
+                    Жолти картони
+                </dt>
+                @if (ViewBag.pogodoci.ZoltiKartoni == null)
+                {
+                    <dd class="col-sm-10">0</dd>
+                }
+                else
+                {
+                    <dd class="col-sm-10">
+                        @ViewBag.pogodoci.ZoltiKartoni
+                    </dd>
+                }
+                <dt class="col-sm-2">
+                    Корнери
+                </dt>
+                @if (ViewBag.pogodoci.Korneri == null)
+                {
+                    <dd class="col-sm-10">0</dd>
+                }
+                else
+                {
+                    <dd class="col-sm-10">
+                        @ViewBag.pogodoci.Korneri
+                    </dd>
+                }
 
-    </dl>
+            </dl>
+        </div>
+        <a asp-action="Index">Back</a>
+
+
+
+
+
+    </div>
 </div>
- <a asp-action="Index">Back</a>
-
-            
-   
-
