--- a/aplikcaija/EverythingNow/EverythingNow/Views/Posetitels/Index.cshtml
+++ b/aplikcaija/EverythingNow/EverythingNow/Views/Posetitels/Index.cshtml
@@ -4,39 +4,45 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Profile</h1>
+<div class="card">
+    <div class="card-body">
+        <h1>Profile</h1>
 
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Emailaddress)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.ImePosetitel)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.UsernamePosetitel)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-             <td>
-                @Html.DisplayFor(modelItem => item.Emailaddress)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ImePosetitel)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.UsernamePosetitel)
-            </td>
-            <td>
-                <a asp-action="Details" asp-route-id="@item.Emailaddress">Details</a> 
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
+        <table class="table">
+            <thead>
+                <tr>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Emailaddress)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.ImePosetitel)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.UsernamePosetitel)
+                    </th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var item in Model)
+                {
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Emailaddress)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.ImePosetitel)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.UsernamePosetitel)
+                        </td>
+                        <td>
+                            <a asp-action="Details" asp-route-id="@item.Emailaddress">Details</a>
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+
+    </div>
+</div>
