--- a/aplikcaija/EverythingNow/EverythingNow/Views/Shared/_Layout.cshtml
+++ b/aplikcaija/EverythingNow/EverythingNow/Views/Shared/_Layout.cshtml
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/EverythingNow.styles.css" asp-append-version="true" />
 </head>
-<body>
+<body style="background:url('https://e0.365dm.com/22/10/2048x1152/skysports-world-cup-qatar-2022_5921764.jpg')">
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark border-bottom box-shadow mb-3">
             <div class="container-fluid">
